# hsMolTalk

./: CMakeLists.txt  LICENSE  README.md  hsMolTalk.cabal  stack.yaml
src/: CMakeLists.txt  FFI.h  Main.hs  dllmain.c  mtchain.cpp  mtchain.h  mtstructure.cpp  mtstructure.h  mtutils.cpp  mtutils.h
src/MT/: Chain.hs  Structure.hs  Utils.hs
