name:                hsMolTalk
version:             0.1.0.0
synopsis:            Haskell binding to the MolTalk library for structural bioinformatics analyses
description:         Please see README.md
homepage:            https://github.com/CodiePP/hsMolTalk
license:             BSD3
license-file:        LICENSE
author:              Alexander Diemand
maintainer:          codieplusplus@apax.net
copyright:           2016 Alexander Diemand
category:            Science
build-type:          Simple
cabal-version:       >=1.10

executable hsMolTalk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -threaded
  extra-libraries:     hsMolTalk_Debug moltalk_Debug stdc++
  extra-lib-dirs:      ./ src

 
